prevented scrollbar from breaking text

--- a/src/components/Terminal/Terminal.module.css
+++ b/src/components/Terminal/Terminal.module.css
@@ -21,6 +21,7 @@
   height: 100%;
 
   padding: 1rem;
+  padding-right: 1.5rem;
 }
 
 /** Scrollbar Styling **/
